--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "axios": "^1.13.4",
     "firebase": "^12.9.0",
     "lucide-react": "^0.563.0",
     "next": "16.1.6",
